--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.movie_db">
+    package="com.example.movie">
    <application
-        android:label="movie_db"
+        android:label="movie"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
