--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,45 +1,27 @@
-name: movie_db
+name: movie
 description: A new Flutter project.
-
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.4 <3.0.0'
-
-
+  sdk: '>=2.19.6 <3.0.0'
 dependencies:
   flutter:
     sdk: flutter
-
-
-
-  cupertino_icons:
+  cupertino_icons: ^1.0.2
   flutter_bloc:
   dio:
   url_launcher:
   carousel_slider: ^4.2.1
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
   flutter_lints: ^2.0.0
-
-
 flutter:
-
   uses-material-design: true
-
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
-
-
-
-
   fonts:
     - family: cairo
       fonts:
@@ -48,10 +30,3 @@ flutter:
         - asset: assets/fonts/Cairo-Medium.ttf
         - asset: assets/fonts/Cairo-Regular.ttf
         - asset: assets/fonts/Cairo-SemiBold.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
