--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "movie_db",
-    "short_name": "movie_db",
+    "name": "movie",
+    "short_name": "movie",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
