--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.0.5
   google_fonts: ^5.1.0
   dio: ^5.2.1+1
+  flutter_screenutil: ^5.8.4
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
