--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.2.1+1
   flutter_screenutil: ^5.8.4
   carousel_slider: ^4.2.1
+  fast_cached_network_image: ^1.2.0
 
 dev_dependencies:
   flutter_test:
