--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_screenutil: ^5.8.4
   carousel_slider: ^4.2.1
   fast_cached_network_image: ^1.2.0
+  scroll_snap_list: ^0.9.1
 
 dev_dependencies:
   flutter_test:
