--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
+
   google_fonts: ^5.1.0
   dio: ^5.2.1+1
   flutter_screenutil: ^5.8.4
   carousel_slider: ^4.2.1
   fast_cached_network_image: ^1.2.0
   scroll_snap_list: ^0.9.1
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
